--- a/package.json
+++ b/package.json
@@ -4,32 +4,15 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "init": "git submodule init && git submodule update",
     "postinstall": "cd lm-app && npm i && cd ../lm-statics && npm i",
-
-    "empty:developpment": "rm -rf dist.developpment/*",
-    "empty:production": "rm -rf dist.production/*",
-
-    "copy:developpment": "cp -r src/ dist.developpment && find dist.developpment/ -maxdepth 100 -type f -name \"*.ts\" -delete",
-    "copy:production": "cp -r src/ dist.production && find dist.developpment/ -maxdepth 100 -type f -name \"*.ts\" -delete",
-
-    "transpile-ts:developpment": "tsc -p ./tsconfig.developpment.json",
-    "transpile-ts:production": "tsc -p ./tsconfig.production.json",
-
-    "transpile-all:developpment": "npm run empty:developpment && npm run copy:developpment && npm run transpile-ts:developpment",
-    "transpile-all:production": "npm run empty:production && npm run copy:production && npm run transpile-ts:production",
-    "transpile-all:developpment:watch": "npx -y nodemon --watch src -e html,pug,css,scss,js,ts,json,jpg,jpeg,png,gif,svg --exec 'npm run transpile-all:developpment'",
-    "transpile-all:production:watch": "npx -y nodemon --watch src -e html,pug,css,scss,js,ts,json,jpg,jpeg,png,gif,svg --exec 'npm run transpile-all:production'",
-
-    "serve:developpment": "NODE_ENV=developpment PORT=3000 node --trace-warnings --experimental-specifier-resolution=node ./dist.developpment/index.js",
-    "serve:production": "NODE_ENV=production PORT=3000 node --trace-warnings --experimental-specifier-resolution=node ./dist.production/index.js",
-    "serve:developpment:watch": "NODE_ENV=developpment PORT=3000 npx -y nodemon --watch dist.developpment --trace-warnings --experimental-specifier-resolution=node ./dist.developpment/index.js",
-    "serve:production:watch": "NODE_ENV=production PORT=3000 npx -y nodemon --watch dist.production --trace-warnings --experimental-specifier-resolution=node ./dist.production/index.js",
-
-    "dev": "npx concurrently -n 'transpile,serve----' 'npm run transpile-all:developpment' 'npm run serve:developpment'",
-    "dev:watch": "npx concurrently -n 'transpile,serve----' 'npm run transpile-all:developpment:watch' 'npm run serve:developpment:watch'",
-    "prod": "npx concurrently -n 'transpile,serve----' 'npm run transpile-all:production' 'npm run serve:production'",
-
-    "start": "npm run dev:watch"
+    "env:build:dev": "node ./scripts/env.build.dev.js",
+    "env:serve:dev": "NODE_ENV=developpment PORT=3000 node --trace-warnings --experimental-specifier-resolution=node ./dist/dev/env/index.js",
+    "env:start:dev": "npx concurrently -n 'env:build:dev,env:serve:dev' 'npm run env:build:dev' 'npm run env:serve:dev'",
+    "env:build:watch:dev": "node ./scripts/env.build.watch.dev.js",
+    "env:serve:watch:dev": "NODE_ENV=developpment PORT=3000 npx -y nodemon --watch dist/dev/env --trace-warnings --experimental-specifier-resolution=node ./dist/dev/env/index.js",
+    "env:start:watch:dev": "npx concurrently -n 'env:build:watch:dev,env:serve:watch:dev' 'npm run env:build:watch:dev' 'npm run env:serve:watch:dev'",
+    "statics:build:dev": "node ./scripts/statics.build.dev.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -45,6 +28,11 @@
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.22",
-    "typescript": "^4.6.2"
+    "chalk": "^5.0.1",
+    "dir-compare": "^4.0.0",
+    "fs-extra": "^10.0.1",
+    "nodemon": "^2.0.15",
+    "typescript": "^4.6.2",
+    "uuid": "^8.3.2"
   }
 }
