--- a/tsconfig.production.json
+++ b/tsconfig.production.json
@@ -1,6 +1,6 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./dist.production"
+    "outDir": "./dist/prod/env"
   }
 }
