--- a/package.json
+++ b/package.json
@@ -29,9 +29,14 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.22",
     "chalk": "^5.0.1",
+    "clean-css": "^5.3.0",
     "dir-compare": "^4.0.0",
     "fs-extra": "^10.0.1",
+    "highlight.js": "^11.5.0",
+    "jsdom": "^19.0.0",
+    "marked": "^4.0.12",
     "nodemon": "^2.0.15",
+    "sass": "^1.49.11",
     "typescript": "^4.6.2",
     "uuid": "^8.3.2"
   }
