--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "init": "git submodule init && git submodule update",
+    "init": "git submodule init && git submodule update --remote --merge",
     "postinstall": "cd lm-app && npm i && cd ../lm-statics && npm i",
     "env:build:dev": "node ./scripts/env.build.dev.js",
     "env:build:watch:dev": "node ./scripts/env.build.watch.dev.js",
