--- a/package.json
+++ b/package.json
@@ -4,23 +4,26 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "preinstall": "git submodule update --init --remote --merge",
-    "postinstall": "cd lm-app && git switch master && npm i && cd ../lm-statics && git switch master && npm i",
     "env:build:dev": "node ./scripts/env.build.dev.js",
     "env:build:watch:dev": "node ./scripts/env.build.watch.dev.js",
     "env:serve:dev": "node ./scripts/env.serve.dev.js",
     "env:serve:watch:dev": "node ./scripts/env.serve.watch.dev.js",
     "env:start:dev": "npx concurrently -n 'env----:build:dev,env----:serve:dev' 'npm run env:build:dev' 'npm run env:serve:dev'",
     "env:start:watch:dev": "npx concurrently -n 'env----:build:watch:dev,env----:serve:watch:dev' 'npm run env:build:watch:dev' 'npm run env:serve:watch:dev'",
-    "statics:clear-cache:dev": "node ./scripts/statics.clear-cache.dev.js",
-    "statics:clear-cache:prod:WIP": "node ./scripts/statics.clear-cache.prod.WIP.js",
-    "statics:build:dev": "node ./scripts/statics.build.dev.js",
-    "statics:build:prod:WIP": "node ./scripts/statics.build.prod.WIP.js",
-    "statics:build:watch:dev": "node ./scripts/statics.build.watch.dev.js",
-    "statics:serve:dev": "node ./scripts/statics.serve.dev.js",
-    "statics:serve:watch:dev": "node ./scripts/statics.serve.watch.dev.js",
+    "statics:clear-cache:dev": "node ./scripts/statics.clear-cache.js dev",
+    "statics:clear-cache:prod": "node ./scripts/statics.clear-cache.js prod",
+    "statics:build:dev": "node ./scripts/statics.build.js dev",
+    "statics:build:prod": "node ./scripts/statics.build.js prod",
+    "statics:build:watch:dev": "node ./scripts/statics.build.watch.js dev",
+    "statics:build:watch:prod": "node ./scripts/statics.build.watch.js prod",
+    "statics:serve:dev": "node ./scripts/statics.serve.js dev",
+    "statics:serve:prod": "node ./scripts/statics.serve.js prod",
+    "statics:serve:watch:dev": "node ./scripts/statics.serve.watch.js dev",
+    "statics:serve:watch:prod": "node ./scripts/statics.serve.watch.js prod",
     "statics:start:dev": "npx concurrently -n 'statics:build:dev,statics:serve:dev' 'npm run statics:build:dev' 'npm run statics:serve:dev'",
     "statics:start:watch:dev": "npx concurrently -n 'statics:build:watch:dev,statics:serve:dev------' 'npm run statics:build:watch:dev' 'npm run statics:serve:dev'",
+    "statics:start:prod": "npx concurrently -n 'statics:build:prod,statics:serve:prod' 'npm run statics:build:prod' 'npm run statics:serve:prod'",
+    "statics:start:watch:prod": "npx concurrently -n 'statics:build:watch:prod,statics:serve:prod------' 'npm run statics:build:watch:prod' 'npm run statics:serve:prod'",
     "dev": "npx concurrently --raw 'npm run env:start:watch:dev' 'npm run statics:start:watch:dev'"
   },
   "dependencies": {
