--- a/package.json
+++ b/package.json
@@ -28,31 +28,31 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "node-fetch": "^3.2.3",
+    "debug": "^4.3.4",
+    "express": "^4.18.1",
+    "http-errors": "^2.0.0",
+    "morgan": "^1.10.0",
+    "node-fetch": "^3.2.9",
     "pug": "^3.0.2"
   },
   "devDependencies": {
-    "@types/cookie-parser": "^1.4.2",
+    "@types/cookie-parser": "^1.4.3",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
     "@types/express-http-proxy": "^1.6.3",
     "@types/morgan": "^1.9.3",
-    "@types/node": "^17.0.22",
+    "@types/node": "^18.0.6",
     "chalk": "^5.0.1",
-    "clean-css": "^5.3.0",
+    "clean-css": "^5.3.1",
     "dir-compare": "^4.0.0",
-    "fs-extra": "^10.0.1",
-    "highlight.js": "^11.5.0",
-    "jsdom": "^19.0.0",
-    "marked": "^4.0.12",
-    "nodemon": "^2.0.15",
-    "sass": "^1.49.11",
-    "typescript": "^4.6.2",
-    "uglify-js": "^3.15.3",
+    "fs-extra": "^10.1.0",
+    "highlight.js": "^11.6.0",
+    "jsdom": "^20.0.0",
+    "marked": "^4.0.18",
+    "nodemon": "^2.0.19",
+    "sass": "^1.53.0",
+    "typescript": "^4.7.4",
+    "uglify-js": "^3.16.2",
     "uuid": "^8.3.2"
   }
 }
